kubernetes/k3s-prod-a/workloads/nextcloud/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: docker.io/library/nextcloud:30.0.6@sha256:0403d9f7af5c5761e0b7bdd403194956c545e9a8c0ce17577ecb553bceee147d
          ports:
            - name: web
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /status.php
              port: 80
            failureThreshold: 3
            periodSeconds: 5
          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/html
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
